--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </header>
 
         <!-- hero/jumbotron -->
-        <section>
-            <div>
+        <section class="hero">
+            <div class="hero-form">
                 <h3> Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
             <!-- Add form element-->
@@ -62,6 +62,7 @@
                     Get Running!
                     </button>
                 </form>
+                
             </div>
             </section>
             <!-- end hero -->
