--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang= "en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./assets/css/style.css" />
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
         <!-- navigation -->
@@ -141,6 +141,29 @@
         <!-- "reach out" section -->
         <section>
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3158.3245174425297!2d-120.98903658468555!3d37.6650817797795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809056aac63ceb3d%3A0x1d36fc60a6a900cd!2s1442%20Melrose%20Ave%2C%20Modesto%2C%20CA%2095350!5e0!3m2!1sen!2sus!4v1627448025210!5m2!1sen!2sus" 
+                width="600" 
+                height="450" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+            </iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p> Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br />
+                    Some Town, Ca <br />
+                    12345 <br />
+                    P: 555.RUN.BUDZ (555.786.2839) <br />
+                    E: <a href="mainto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </section>
 
         <!-- footer -->
