--- a/index.html
+++ b/index.html
@@ -141,13 +141,19 @@
         </section>
        
         <!-- "meet the trainers" section -->
-        <section id="your-trainers" class="trainers">
+        <div class="trainers">
+            <!-- This is for show; keep the aritcle tags you have -->
+            <article>Trainer 1 Info</article>
+            <article>Trainer 2 Info</article>
+            <article>Trainer 3 Info</article>
+        </div>
+        <section id="your-trainers">
         <div class="flex-row">
             <h2 class="section-title primary-border">Meet The Trainers</h2>
         </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workoutclothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
+                <div class="trainer-bio">
                     <h3>Arron Stephens</h3>
                     <h4>Speed / Strength</h4>
                     <p>
@@ -156,20 +162,21 @@
                 </div>
             </article>
             <!-- second trainer bio -->
-            <article class="trainer">
-                <div class="trainer-bio text-right">
+            <article class="trainer"> 
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                <div class="trainer-bio">
                     <h3>Joanna Gill</h3>
                     <h4>Endurance</h4>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa seditaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
                     </p>
                 </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+               
             </article>
             <!-- third trainer bio -->
             <article class="trainer">
                 <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-                <div class="trainer-bio text-left">
+                <div class="trainer-bio">
                     <h3>Harry "the Headband" Smith</h3>
                     <h4>Strength</h4>
                     <p>
